@@ -1,4 +1,4 @@
-Pandora FMS: The Flexible Monitoring System v2.0
+Pandora FMS: The Flexible Monitoring System v3.0
 =================================================
 
 http://www.pandorafms.org
@@ -54,4 +54,4 @@ License
 -------
 
 The project is distributed under the GPL License v2 or later.
-Copyright (C) 2004-2008 Pandora FMS development team
+Copyright (C) 2004-2009 Pandora FMS development team
